# ztimedb

./: .env  Cargo.toml  README.md
.cargo/: config.toml
api/: Cargo.toml
entity/: Cargo.toml
entity/src/: bandwidth.rs  lib.rs
migration/: Cargo.toml
migrations/2023-06-02-081652_create_todo_table/: up.sql
migrations/2023-06-02-085845_create_bandwidth/: up.sql
service/: Cargo.toml
src/: main.rs  schema.rs
src/models/: bandwidth.rs
