[package]
name = "actix-example"
version = "0.1.0"
edition = "2021"

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
# prisma-client-rust = { workspace = true, features = ["migrations", "postgresql"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
